Parrot revised. Distinguished in ArDrone1 and ArDrone2. ArDrone2 changed to Service (for dodedodo) Holonomic Robot classes added (RemoteControl, interface) moveLeft and moveRight removed from IRobotDevice and added to IHolonomicrobotDevice instead radius in move commands changed from int to double (for ArDrone2)